--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@ body {
 
 #questionLabel {
     font-size: 40px;
-    display: block;
-    margin-left: 400px;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 50%);
 }
 
 #question {
