--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ html {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 body {
-    width: auto;
-    height: 100 vh;
     background-color: rebeccapurple;
 }
 
@@ -24,6 +22,20 @@ body {
     margin-right: -50%;
     transform: translate(-50%, 50%);
 }
+
+@media only screen and (min-width: 320px) {
+    .boxSize {
+        size: 300px;
+    }
+}
+
+@media only screen and (min-width: 1025px){
+    .boxSize {
+        width: 900px;
+    }
+}
+
+
 
 #question {
     font-size: 25px;
@@ -45,11 +57,6 @@ body {
 #shake {
     text-align: center;
     font-size: 25px;
-}
-
-h3 {
-    text-align: center;
-    font-size: 30px;
 }
 
 p {
